; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_xen-kbdfront.c_xenkbd_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_xen-kbdfront.c_xenkbd_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenbus_device = type { i32 }
%struct.xenkbd_info = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xenbus_device*)* @xenkbd_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xenkbd_remove(%struct.xenbus_device* %0) #0 {
  %2 = alloca %struct.xenbus_device*, align 8
  %3 = alloca %struct.xenkbd_info*, align 8
  store %struct.xenbus_device* %0, %struct.xenbus_device** %2, align 8
  %4 = load %struct.xenbus_device*, %struct.xenbus_device** %2, align 8
  %5 = getelementptr inbounds %struct.xenbus_device, %struct.xenbus_device* %4, i32 0, i32 0
  %6 = call %struct.xenkbd_info* @dev_get_drvdata(i32* %5)
  store %struct.xenkbd_info* %6, %struct.xenkbd_info** %3, align 8
  %7 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %8 = call i32 @xenkbd_disconnect_backend(%struct.xenkbd_info* %7)
  %9 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %10 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %15 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %14, i32 0, i32 3
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @input_unregister_device(i64 %16)
  br label %18

18:                                               ; preds = %13, %1
  %19 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %20 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %18
  %24 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %25 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @input_unregister_device(i64 %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %30 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %28
  %34 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %35 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %34, i32 0, i32 1
  %36 = load i64, i64* %35, align 8
  %37 = call i32 @input_unregister_device(i64 %36)
  br label %38

38:                                               ; preds = %33, %28
  %39 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %40 = getelementptr inbounds %struct.xenkbd_info, %struct.xenkbd_info* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = call i32 @free_page(i64 %41)
  %43 = load %struct.xenkbd_info*, %struct.xenkbd_info** %3, align 8
  %44 = call i32 @kfree(%struct.xenkbd_info* %43)
  ret i32 0
}

declare dso_local %struct.xenkbd_info* @dev_get_drvdata(i32*) #1

declare dso_local i32 @xenkbd_disconnect_backend(%struct.xenkbd_info*) #1

declare dso_local i32 @input_unregister_device(i64) #1

declare dso_local i32 @free_page(i64) #1

declare dso_local i32 @kfree(%struct.xenkbd_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
